--- a/assets/css/sobad-style.css
+++ b/assets/css/sobad-style.css
@@ -148,11 +148,23 @@ p{
     border-bottom-right-radius: 25px !important;
 }
 
+.border-sm-white{
+    border: 2px solid #FFFFFF !important;
+}
+
 .bg-gradient-primary-grey{
     background: linear-gradient(#FFFFFF, #D9D9D9);
 }
 .bg-gradient-grey{
     background: linear-gradient(#F0F0F0, #D1D1D1);
+}
+
+.bg-white{
+    background-color: #FFFFFF;
+}
+
+.white{
+    color: #FFFFFF !important;
 }
 
 .grey{
@@ -231,6 +243,10 @@ p{
 
 .manufac{
 margin-top: -150px;
+}
+
+.btn:hover{
+    color:black !important;
 }
 
 
@@ -369,4 +385,13 @@ button.bg-light:hover {
         display: none;
     }
 
+}
+
+
+/* ================Landing Page Contact Style=============== */
+.wrapper{
+    background: url("../img/bg-contact.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
 }
