--- a/assets/css/sobad-style.css
+++ b/assets/css/sobad-style.css
@@ -390,7 +390,7 @@ button.bg-light:hover {
 
 /* ================Landing Page Contact Style=============== */
 .wrapper {
-    background: url(https://info.soloabadi.com/assets/img/bg-contact.png);
+    background: url(assets/img/bg-contact.png);
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
