--- a/assets/css/sobad-style.css
+++ b/assets/css/sobad-style.css
@@ -389,8 +389,7 @@ button.bg-light:hover {
 
 
 /* ================Landing Page Contact Style=============== */
-.wrapper {
-    /* background: url(../assets/img/bg-contact.png); */
+.sobad-wrapper {
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
