--- a/assets/css/sobad-style.css
+++ b/assets/css/sobad-style.css
@@ -390,7 +390,7 @@ button.bg-light:hover {
 
 /* ================Landing Page Contact Style=============== */
 .sobad-wrapper {
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100%;
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
+    height: 100% !important;
 }
