--- a/assets/css/sobad-style.css
+++ b/assets/css/sobad-style.css
@@ -26,6 +26,7 @@ html,body{
 h1 {
     font-size: 54px !important;
     margin: 0 !important;
+    line-height: 35px !important;
 }
 
 h2{
@@ -47,7 +48,7 @@ h5{
 }
 
 h6{
-    font-size: 300px !important;
+    font-size: 11px !important;
     
 }
 
@@ -215,7 +216,7 @@ p{
 
 .main
 {         
-    position:relative;
+    position:fixed;
     top:0px;
     bottom:0px;
     left:0px;
@@ -256,9 +257,67 @@ p{
 
 
 
+/* Image style */
+.img-stadio {
+    width: 189px !important;
+    height: 185px;
+    margin-left: -20px;
+    margin-top: -2px;
+    margin-bottom: -2px;
+}
+
+.img-board {
+    width: 187px !important;
+    height: 191px;
+    margin-bottom: -11px;
+    border-radius: 40px;
+}
+
+.img-port {
+    width: 197px !important;
+    margin-bottom: 35px;
+    margin-top: 48px;
+}
+
+.img-baby {
+    width: 207px !important;
+    margin-left: 17px;
+}
+
+.img-weight {
+    width: 191px !important;
+    margin-bottom: -32px;
+}
+
+.image-slide {
+    width: 168px !important;
+    margin-top: 31px;
+}
+
+.img-lila {
+    width: 160px !important;
+    margin-left: 12px;
+}
+.btn-arrow-next{
+    content:url("../img/btn-arrow-next.png");
+    width: 35px !important;
+    height:35px !important;
+}
+
+.btn-arrow-down{
+    content:url("../img/btn-arrow-down.png");
+    width: 35px !important;
+    height: 35px !important;
+}
+
+.cobtent-title {
+    padding-right: 25px;
+}
+
+
 /* ==============OwlCarousel Custom Style============ */
 .owl-item{
-    height: 300px !important;
+    height: 320px !important;
 }
 
 .manufac{
@@ -284,13 +343,15 @@ p{
 
 .owl-prev {
     left: -15px;
-    top: 63%;
+    top: 60%;
 }
 
 .owl-next {
     right: -15px;
-    top: 63%;
+    top: 60%;
 }
+
+
 
 
 
@@ -331,6 +392,19 @@ button.bg-light:hover {
     color: #FFFFFF !important;
 }
 
+.dropdown-item{
+    width: 162px !important;
+    padding: 5px 1px 1px 1px !important;
+    text-align: center !important;
+}
+.dropdown-menu.sobad-dropdown.show {
+    left: 15px !important;
+}
+
+.dropdown-menu{
+    padding: 0px !important;
+}
+
 
 
 /* ===========Responsive Mobile Style============== */
@@ -345,10 +419,16 @@ button.bg-light:hover {
     padding: 0;
     }
 
+    .main{
+        position: fixed !important;
+        padding-top: 20px;
+    }
+
 
     h1 {
         font-size: 50px !important;
         margin: 0 !important;
+        line-height: 31px !important;
     }
     
     h2{
@@ -365,26 +445,18 @@ button.bg-light:hover {
     }
     
     h5{
-        font-size: 14px !important;
+        font-size: 11px !important;
         
     }
     
     h6{
-        font-size: 300px !important;
+        font-size: 8px !important;
         
     }
     
     p{
-        font-size: 13px !important;
-    }
-
-    .main
-    {         
-    position:fixed;
-    top:0px;
-    bottom:0px;
-    left:0px;
-    right:0px;
+        font-size: 12px !important;
+        line-height: 15px;
     }
 
     .card-pc {
@@ -405,8 +477,67 @@ button.bg-light:hover {
         }
         
     .dropdown-item{
-        padding: 0.25rem 0.5rem !important;
+        width: 100px !important;
+        padding: 5px 1px 1px 1px !important;
         text-align: center !important;
+    }
+    .dropdown-menu.sobad-dropdown.show {
+        left: 15px !important;
+    }
+
+    /* image Style */
+    .img-stadio{
+        margin-left: -15px;
+        width: 132px !important;
+        height: 125px;
+        margin-top: -1px;
+        margin-bottom: -2px;
+    }
+
+    .img-board{
+        margin-bottom: -8px;
+        width: 130px !important;
+        height: 128px !important;
+        border-radius: 45px;
+    }
+
+    .img-port{  
+        margin-left: 15px;
+        width: 120px !important;
+        height: 121px !important;
+        margin-bottom: unset;
+        margin-top: unset;
+    }
+
+    .img-baby{
+        width: 157px !important;
+        margin-bottom: -13px;
+        margin-left: unset;
+    }
+
+    .img-weight{
+        width: 130px !important;
+        height: 130px !important;
+        margin-left: 3px;
+        margin-bottom: -10px;
+        margin-top: 3px;
+    }
+
+    .img-lila {
+        width: 106px !important;
+        margin-left: 10px;
+    }
+
+    .btn-arrow-next{
+        content:url("../img/btn-arrow-next.png");
+        width: 17.31px !important;
+        height: 17.31px !important;
+    }
+    
+    .btn-arrow-down{
+        content:url("../img/btn-arrow-down.png");
+        width: 17.31px !important;
+        height: 17.31px !important;
     }
 }
 
@@ -447,10 +578,7 @@ button.bg-light:hover {
     .card-mobile{
         display: none !important;
     }
-    .dropdown-item{
-        width: 189px !important;
-        text-align: center !important;
-    }
+
     .owl-nav{
         display: none !important;
     }
@@ -466,6 +594,38 @@ button.bg-light:hover {
     min-height: 100%;
     margin: 0;
     padding: 0;
+    }
+
+    h1 {
+        font-size: 90px !important;
+        margin: 0 !important;
+    }
+    
+    h2{
+        font-size: 52px !important;
+        margin: 0 !important;
+    }
+    
+    h3{
+        font-size: 34px !important;
+    }
+    
+    h4{
+        font-size: 28px !important;
+    }
+    
+    h5{
+        font-size: 25px !important;
+        
+    }
+    
+    h6{
+        font-size: 21px !important;
+        
+    }
+    
+    p{
+        font-size: 20px !important;
     }
     .content{
         max-width: 60% !important;
@@ -487,11 +647,49 @@ button.bg-light:hover {
         display: none;
     }
     .dropdown-item{
-        width: 18vw !important;
+        width: 217px !important;
         text-align: center !important;
     }
     .owl-nav{
         display: none !important;
+    }
+
+    .img-stadio {
+        width: 249px !important;
+        height: 273px;
+        margin-left: -20px;
+    }
+
+    .img-board {
+        width: 249px !important;
+        height: 293px;
+        margin-bottom: -20px;
+        border-radius: 40px;
+    }
+
+    .img-port {
+        width: 263px !important;
+        margin-bottom: 39px;
+        margin-top: 103px;
+    }
+
+    .img-baby {
+        width: 272px !important;
+        margin-left: 13px;
+        margin-top: 38px;
+    }
+
+    .img-weight {
+        width: 259px !important;
+        margin-bottom: -15px;
+    }
+
+    .img-lila {
+        width: 242px !important;
+    }
+
+    .cobtent-title {
+        padding-right: 100px;
     }
 
 }
